--- a/LinearRegression/LinearRegression.ipynb
+++ b/LinearRegression/LinearRegression.ipynb
@@ -1671,15 +1671,56 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-02T01:34:54.757008Z",
-     "start_time": "2025-04-02T01:34:54.753761Z"
+     "end_time": "2025-04-09T17:45:16.464925Z",
+     "start_time": "2025-04-09T17:45:16.444302Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "square = [[1, 2, 4],\n",
+    "        [1, 2, 4],\n",
+    "        [1, 2, 4]]\n",
+    "\n",
+    "\n",
+    "def is_magic(magic_square):\n",
+    "\n",
+    "    # checking if rows are equal\n",
+    "    for row in magic_square:\n",
+    "        if sum(row) != 15:\n",
+    "            return Falsetypical alpha value in ridge regression\n",
+    "\n",
+    "    # checking if columns are equal\n",
+    "    for col in range(3):\n",
+    "        if magic_square[0][col] + magic_square[1][col] + magic_square[2][col] != 15:\n",
+    "            return False\n",
+    "\n",
+    "\n",
+    "    # checking if diags are equal\n",
+    "    if magic_square[0][0] + magic_square[1][1] + magic_square[2][2] != 15:\n",
+    "        return False\n",
+    "\n",
+    "    if magic_square[0][2] + magic_square[1][1] + magic_square[2][0] != 15:\n",
+    "        return False\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "is_magic(square)"
+   ],
    "id": "376af3aca3f1e794",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {},
